# ai-translator

./: .gitignore  AGENTS.md  README.md  add_column_to_database.py  ai-translator  run_translator.sh  translations.db  translator.py
dapp/script/: Deploy.s.sol
dapp/src/: AITaskRegistry.sol
dapp/test/: AITaskRegistry.t.sol
orchestrator/: .env.example  go.mod
orchestrator/cmd/orchestrator/: main.go
orchestrator/contracts/: AITaskRegistry.json
orchestrator/internal/chain/: poller.go  registry.go
orchestrator/internal/config/: config.go
orchestrator/internal/pyapp/: client.go
orchestrator/internal/runner/: runner.go
orchestrator/internal/store/: sqlite.go
orchestrator/internal/tx/: txmgr.go
pyapp/: AGENTS.md  __init__.py  __main__.py  cli.py  db.py  main.py  pyproject.toml  requirements.txt  settings.py
pyapp/api/: internal_auth.py  main.py
pyapp/api/schemas/: schemas.py
pyapp/clients/: openai_client.py
pyapp/models/: schemas.py
pyapp/repositories/: sqlite_repo.py  task_repo.py
pyapp/services/: task_service.py  translator.py
pyapp/utils/: hash_utils.py  time_utils.py
